--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "loader-utils": "^0.2.9",
     "react": "^0.13.1",
     "react-jade": "^2.4.0"
   }
