--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "description": "Loader for Webpack, transforming Jade templates to React Javascript functions",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf dist",
+    "prebuild": "npm run lint -s && npm run clean -s",
+    "build": "npm run prebuild && babel --optional runtime index.js -d dist",
+    "lint": "eslint .",
+    "prepublish": "npm run build",
+    "start": "NODE_ENV=development webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
