--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "react-jade": "^2.4.0"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.2",
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-plugin-add-module-exports": "^0.1.3-alpha",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
     "eslint": "^1.4.3"
   },
   "peerDependencies": {
