--- a/.eslintrc
+++ b/.eslintrc
@@ -81,7 +81,7 @@
         "no-else-return": [0],
         "no-empty": [2],
         "no-empty-character-class": [2],
-        "no-empty-label": [2],
+        "no-labels": [2],
         "no-eq-null": [0],
         "no-eval": [2],
         "no-ex-assign": [2],
@@ -99,7 +99,6 @@
         "no-irregular-whitespace": [2],
         "no-iterator": [2],
         "no-label-var": [2],
-        "no-labels": [2],
         "no-lone-blocks": [2],
         "no-lonely-if": [2],
         "no-loop-func": [2],
@@ -162,7 +161,7 @@
         "semi": [2],
         "semi-spacing": [2, { "before": false, "after": true }],
         "sort-vars": [0],
-        "space-after-keywords": [2, "always"],
+        "keyword-spacing": [2],
         "space-before-function-paren": [2, { "anonymous": "always", "named": "always" }],
         "space-before-blocks": [0, "always"],
         "space-in-brackets": [0, "never", {
@@ -175,7 +174,6 @@
         }],
         "space-in-parens": [2, "never"],
         "space-infix-ops": [2],
-        "space-return-throw-case": [2],
         "space-unary-ops": [2, { "words": true, "nonwords": false }],
         "spaced-line-comment": [0, "always"],
         "strict": [2, "never"],
