--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
-    "babel-eslint": "^5.0.0-beta6",
+    "babel-eslint": "^6.1.2",
     "babel-plugin-add-module-exports": "^0.1.3-alpha",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
-    "eslint": "^1.4.3"
+    "eslint": "^3.1.1"
   },
   "peerDependencies": {
     "webpack": "^1.12.2",
